--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My first three.js app</title>
+    <title>Onur Kaya</title>
     <style>
     </style>
     <link rel="stylesheet" href="styles.css">
